assets/css/jr-styles.css
/* COLORS
    GOLD:   #B88E52     rgba(184,142,82,.6)
*/
/* == MAIN STYLES == */
html, body{
    height: 100%;
}

section{
    margin:0px;
    min-height: 600px;
    /*border: medium solid black;*/
}

blockquote{
   
    border-left: thick solid #d4bb97;
    box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);/
	-webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
	-moz-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
    background-color: #997379;
}
.page-section{
    margin:0px;
    /*border: medium solid black;*/
    padding: 15px;
}
.pre-footer-content{
    height: 90%;
    z-index: -1;
}

/* ===  HELPER STYLES ===  */
.vertical-align-parent, .horizontal-align-parent{
    position: relative;
}
.vertical-align-child{
      position:absolute;
    /*width:100%;*/
    top:60%;
     -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
}

#cover-fade-in-div{
}
.horizontal-align-child{
      position:absolute;
    height:100%;
    left:50%;
     -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
      transform: translateX(-50%);
}

.wedding-main-text, .annoucement-text {
    
    font-family: 'Prata', serif;
}

/* == MODIFY OWL CAROUSEL == */
    .owl-carousel{
        z-index: 0;
}
.owl-nav .owl-prev{
    background-color: #bf9963 !important;
}

.owl-nav .owl-next{   
    background-color: #d4bb97 !important;

}


.owl-dot span{   
    background-color: #d4bb97 !important;

}

.owl-dot.active span{   
    background-color: #D6D6D6 !important;

}



/* === NAV STYLES === */

#navbar-site-top .container .row div:first-of-type{
    padding-left: 0px;
}
#navbar-site-top a.nav-link{
    color: white;
    font-size: 20px;
    font-family: 'Prata', serif; 
    text-shadow:2px 2px black;
}

#navbar-site-top a.nav-link:hover{
 
text-decoration-color: grey;
    text-decoration: underline;  
}
#navbar-site-top ul {
    display:inline-block;
    margin:0 auto;
}
#navbar-site-top {
      background-color: rgba(184,142,82,1);
    box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);/
	-webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
	-moz-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
}

#navbar-site-top li {
   font-weight: bold;
    color: white;
}


/* === COVER MAIN STYLES === */
#cover-main{
   /*min-height:800px;*/
  /* background: url('../img/bg/rings-focused-bg-blurred.jpeg') no-repeat;*/
   background: url('../img/engagement/mr-mrs-both-kiss.jpg') no-repeat;
   background-size: cover;
   background-position:  -200px 50px;
   padding:0px;
}

 #cover-main{
   
    height:98%;
}
#cover-main .container-fluid{
   
    height:100%;
}
#cover-main .container-fluid{
    position:relative;
}
#cover-main .cover-img-row{
    position:absolute;
    width:100%;
    top:50%;
    -webkit-transform: translateY(-75%);
    -ms-transform: translateY(-75%);
    -o-transform: translateY(-75%);
    transform: translateY(-100%);
    opacity: 1;
}
#cover-main .cover-fade-row{
      position:absolute;
    width:100%;
    top:40%;

    opacity: 1;
}

.cover-couple-img{
    width:100%;
    box-shadow: 0 0 5px 5px #888;
    border: medium solid lightGray;
    
    border-radius: 100%;
}
.cover-img-float{
    position:absolute;
}
#float-img-wrapper-1{
    left:0;
    top:0;
    transform:translate(-65%,-45%);
    
    min-height:100px;
    z-index: -2;
}
#float-img-2{
    width:200px;
}

#float-img-wrapper-2{ 
    left:0;
    top:0;
    transform:translate(-190%,-10%);
    
    height:100px;
    z-index: -1;
}



.cover-img-wrapper{
    position:relative;
    
/*     height: 500px;
    box-shadow:10px 10px 10px 0px white inset;
    border-radius:100%*/
}

 #cover-fade-in-sub{
    font-family: 'Prata', serif; 
     font-size: 20px;
}
#cover-fade-in-header{
    
/*font-family: 'Parisienne', cursive;*/
    font-family: 'Great Vibes', cursive;
    
     font-size:50px;
}

#fade-in-wrapper-1{
    z-index: 10;
    background-color: rgba(0,0,0,.5);
    margin-top:45px;
}
#fade-in-wrapper-2{
    z-index: 10;
    background-color: rgba(0,0,0,.65);
    margin-top:5px;
    padding-top: 5px;
    border-radius:20px;
    border-width:2px;
    border-style:solid;
}

/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in {
  opacity:0;  /* make things invisible upon start */
  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;

  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;

  -webkit-animation-duration:1s;
  -moz-animation-duration:1s;
  animation-duration:1s;
}

.fade-in.one {
  -webkit-animation-delay: 0.7s;
  -moz-animation-delay: 0.7s;
  animation-delay: 0.7s;
}



.heart {
  background-color: red;
  display: inline-block;
  height: 30px;
  margin: 0 10px;
  position: relative;
  top: 0;
  transform: rotate(-45deg);
  width: 30px;
}

.heart:before,
.heart:after {
  content: "";
  background-color: red;
  border-radius: 50%;
  height: 30px;
  position: absolute;
  width: 30px;
}

.heart:before {
  top: -15px;
  left: 0;
}

.heart:after {
  left: 15px;
  top: 0;
}

/* === GALLERY SECTION === */

#gallery-main-1 .section-header{
    font-family: 'Tangerine', cursive;
    font-weight: 600;
    color: #4E4948;
}

/* =================== */
/* === COUPLE INFO === */
/* =================== */

#about-couple-main{
    padding:0px;
    border: thin solid rgba(184,142,82,1);
}


.section-header  {
    font-family: 'Dancing Script', cursive;
    /*font-family: 'Tangerine', cursive;*/

    
}

.section-header.dark-text {
     text-shadow: 2px 2px #D3D3D3;
    
}
/* ... */

